--- a/rust_app/Cargo.toml
+++ b/rust_app/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
-occlum_dcap = { path = "../../../tools/toolchains/dcap_lib" }
+occlum-ra = { path = "../occlum-ra" }
 
 [build-dependencies]
 cc = "1.0"
 
+[patch.crates-io]
+ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }
