--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "occlum-ra"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -10,7 +10,7 @@ webpki = "0.22.0"
 webpki-roots = "0.21"
 base64 = "0.9.2"
 pem = "0.8"
-chrono  = "=0.4.10"
+chrono  = "0.4.19"
 yasna   = { git = "https://github.com/sgx-test/yasna.rs", features = ["bit-vec", "num-bigint", "chrono"] }
 bit-vec = "*"
 rand_core = { version = "0.5.1", features = ["getrandom"] }
