--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -21,7 +21,7 @@ sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.
 itertools = { version = "0.8", default-features = false }
 hex = { version = "0.4", default-features = false }
 log = { version = "0.4.14" }
-serde = { version = "=1.0.136", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 occlum_dcap = { git = "https://github.com/ABMatrix/occlum" }
