--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -12,14 +12,14 @@ RUN apt-get update && DEBIAN_FRONTEND="noninteractive" apt-get install -y --no-i
     wget -qO - https://occlum.io/occlum-package-repos/debian/public.key | apt-key add - && \
     apt-get update && \
     apt-get install -y occlum libsgx-uae-service libsgx-dcap-ql libsgx-dcap-ql-dev libsgx-quote-ex-dev &&\
-    apt-get install -y libsgx-urts libsgx-dcap-ql libsgx-dcap-default-qpl
+    apt-get install -y libsgx-urts libsgx-dcap-default-qpl
 RUN apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 ENV PATH="/opt/occlum/build/bin:/usr/local/occlum/bin:$PATH"
 RUN apt update && apt install m4 make -y
 COPY ./gmp_musl.sh ./
-RUN chmod +x ./gmp_musl.sh
-RUN ./gmp_musl.sh
+#RUN chmod +x ./gmp_musl.sh
+#RUN ./gmp_musl.sh
 
 # packager stage:
 # Users can build their own applications and put to occlum instance.
@@ -41,6 +41,7 @@ FROM base as deployer
 WORKDIR /root
 COPY --from=packager /RUST/occlum_instance/occlum_instance.tar.gz .
 RUN tar -xvzf occlum_instance.tar.gz
+COPY --from=packager /etc/sgx_default_qcnl.conf /etc
 RUN    mkdir -p /var/run/aesmd && \
     echo "LD_LIBRARY_PATH=/opt/intel/sgx-aesm-service/aesm nohup /opt/intel/sgx-aesm-service/aesm/aesm_service --no-daemon >/dev/null 2>&1 &" > /root/.bashrc
 
