--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -6,26 +6,46 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-webpki = "0.22.0"
-webpki-roots = "0.21"
-base64 = "0.9.2"
-pem = "0.8"
-chrono  = "0.4.19"
-yasna   = { git = "https://github.com/sgx-test/yasna.rs", features = ["bit-vec", "num-bigint", "chrono"] }
-bit-vec = "*"
-rand_core = { version = "0.5.1", features = ["getrandom"] }
-num-bigint = "0.4.2"
-ring = { default-features = false, features = ["alloc"] }
-sha2 = { version = "^0.8", default-features = false }
-sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
-itertools = { version = "0.8", default-features = false }
-hex = { version = "0.4", default-features = false }
-log = { version = "0.4.14" }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+webpki-roots = { version = "0.21", optional = true }
+pem = { version = "0.8", optional = true }
+yasna   = { git = "https://github.com/sgx-test/yasna.rs", features = ["bit-vec", "num-bigint", "chrono"], optional = true }
+rand_core = { version = "0.5.1", features = ["getrandom"], optional = true }
+num-bigint = { version = "0.4.2", optional = true }
 
-occlum_dcap = { git = "https://github.com/ABMatrix/occlum" }
+chrono  = { version = "0.4.19", default-features = false }
+sha2 = { version = "^0.8", default-features = false }
+webpki = { version = "0.21.4", default-features = false }
+base64 = { version = "0.9.2", default-features = false }
+log = { version = "0.4.14", default-features = false }
+ring = { version = "*", default-features = false, features = ["alloc"] }
+hex = { version = "0.4", default-features = false }
+
+sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
+serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+itertools = { version = "0.8", default-features = false }
+bit-vec = { version = "*" }
+httparse = { version = "1.3.2", default-features = false }
+rustls = { version = "0.19", default-features = false, features = ["dangerous_configuration"] }
+#reqwest = { version = "0.11.12", features = ["rustls-tls"] }
+
+#occlum_dcap = { git = "https://github.com/ABMatrix/occlum", optional = true }
+occlum_dcap = { path = "../dcap_lib_2", optional = true }
 
 
 [patch.crates-io]
 ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }
+
+[features]
+default = ["std"]
+
+no_std = []
+
+std = [
+    "webpki-roots",
+    "pem",
+    "yasna",
+    "rand_core",
+    "num-bigint",
+    "occlum_dcap"
+]
