--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -20,7 +20,7 @@ log = { version = "0.4.14", default-features = false }
 ring = { version = "*", default-features = false, features = ["alloc"] }
 hex = { version = "0.4", default-features = false }
 
-sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
+sgx_types = { git = "https://github.com/occlum/incubator-teaclave-sgx-sdk" }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 itertools = { version = "0.8", default-features = false }
@@ -28,7 +28,7 @@ bit-vec = { version = "*" }
 httparse = { version = "1.3.2", default-features = false }
 rustls = { version = "0.19", default-features = false, features = ["dangerous_configuration"] }
 #reqwest = { version = "0.11.12", features = ["rustls-tls"] }
-
+rand = "*"
 #occlum_dcap = { git = "https://github.com/ABMatrix/occlum", optional = true }
 occlum_dcap = { path = "../dcap_lib_2", optional = true }
 
