--- a/rust_app/Cargo.toml
+++ b/rust_app/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 libc = "0.2"
 occlum-ra = { path = "../occlum-ra" }
+env_logger = "0.9.0"
 
 [build-dependencies]
 cc = "1.0"
