--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -27,9 +27,9 @@ itertools = { version = "0.8", default-features = false }
 bit-vec = { version = "*" }
 httparse = { version = "1.3.2", default-features = false }
 rustls = { version = "0.19", default-features = false, features = ["dangerous_configuration"] }
-#reqwest = { version = "0.11.12", features = ["rustls-tls"] }
+
 http_req = { version = "0.9.0", default-features = false, features = ["rust-tls"] }
-rand = "*"
+rand =  { version = "0.8.5"}
 #occlum_dcap = { git = "https://github.com/ABMatrix/occlum", optional = true }
 occlum_dcap = { path = "../dcap_lib_2", optional = true }
 
