--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -30,8 +30,8 @@ rustls = { version = "0.19", default-features = false, features = ["dangerous_co
 
 http_req = { version = "0.9.0", default-features = false, features = ["rust-tls"] }
 rand =  { version = "0.8.5"}
-#occlum_dcap = { git = "https://github.com/ABMatrix/occlum", optional = true }
-occlum_dcap = { path = "../dcap_lib_2", optional = true }
+occlum_dcap = { git = "https://github.com/ABMatrix/occlum", optional = true }
+#occlum_dcap = { path = "../dcap_lib_2", optional = true }
 
 
 [patch.crates-io]
