--- a/rust_app/Cargo.toml
+++ b/rust_app/Cargo.toml
@@ -10,6 +10,9 @@ libc = "0.2"
 occlum-ra = { path = "../occlum-ra" }
 env_logger = "0.9.0"
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = "0.5"
+
 [build-dependencies]
 cc = "1.0"
 
