--- a/rust_app/Cargo.toml
+++ b/rust_app/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 libc = "0.2"
 occlum-ra = { path = "../occlum-ra" }
 env_logger = "0.9.0"
+rocksdb = "0.14.0"
+
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.5"
