--- a/rust_app/Cargo.toml
+++ b/rust_app/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 libc = "0.2"
 occlum-ra = { path = "../occlum-ra" }
 env_logger = "0.9.0"
+db-wrap = { git = "https://github.com/ABMatrix/db-wrap.git", branch = "main" }
+hex = "0.4.3"
+serde = { version = "1.0.159" , features = [ "derive"] }
+serde_json = "1.0.96"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.5"
