--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 name = "occlum-ra"
 version = "0.1.0"
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2021"
 
 [dependencies]
 webpki-roots = { version = "0.21", optional = true }
@@ -11,7 +9,6 @@ pem = { version = "0.8", optional = true }
 yasna   = { git = "https://github.com/sgx-test/yasna.rs", features = ["bit-vec", "num-bigint", "chrono"], optional = true }
 rand_core = { version = "0.5.1", features = ["getrandom"], optional = true }
 num-bigint = { version = "0.4.2", optional = true }
-
 chrono  = { version = "0.4.19", default-features = false }
 sha2 = { version = "^0.8", default-features = false }
 webpki = { version = "0.21.4", default-features = false }
@@ -19,29 +16,23 @@ base64 = { version = "0.9.2", default-features = false }
 log = { version = "0.4.14", default-features = false }
 ring = { version = "*", default-features = false, features = ["alloc"] }
 hex = { version = "0.4", default-features = false }
-
 sgx_types = { git = "https://github.com/occlum/incubator-teaclave-sgx-sdk" }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 itertools = { version = "0.8", default-features = false }
-bit-vec = { version = "*" }
+bit-vec = "*"
 httparse = { version = "1.3.2", default-features = false }
-rustls = { version = "0.19", default-features = false, features = ["dangerous_configuration"] }
-
 http_req = { version = "0.9.0", default-features = false, features = ["rust-tls"] }
+rustls = { version = "0.19", default-features = false, features = ["dangerous_configuration"] }
 rand =  { version = "0.8.5"}
 occlum_dcap = { git = "https://github.com/ABMatrix/occlum", optional = true }
-#occlum_dcap = { path = "../dcap_lib_2", optional = true }
-
 
 [patch.crates-io]
 ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }
 
 [features]
 default = ["std"]
-
 no_std = []
-
 std = [
     "webpki-roots",
     "pem",
