--- a/rust_app/Cargo.toml
+++ b/rust_app/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 libc = "0.2"
 occlum-ra = { path = "../occlum-ra" }
 env_logger = "0.9.0"
-rust-gmp-kzen = "0.5.1"
+rust-gmp-kzen = { version = "0.5.1", git = "https://github.com/sgx-test/rust-gmp", branch = "static_link" }
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemallocator = "0.5"
@@ -17,5 +17,5 @@ tikv-jemallocator = "0.5"
 [build-dependencies]
 cc = "1.0"
 
-[patch.crates-io]
-ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }
+#[patch.crates-io]
+#ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }
