--- a/rust_app/Cargo.toml
+++ b/rust_app/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
-occlum-ra = { path = "../occlum-ra" }
+#occlum-ra = { path = "../occlum-ra" }
 env_logger = "0.9.0"
 rust-gmp-kzen = { version = "0.5.1", git = "https://github.com/sgx-test/rust-gmp", branch = "static_link" }
 zk-paillier = { git = "https://github.com/sgx-test/zk-paillier", branch = "0.3.12-generic" }
