--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -14,13 +14,13 @@ sha2 = { version = "^0.8", default-features = false }
 webpki = { version = "0.21.4", default-features = false }
 base64 = { version = "0.9.2", default-features = false }
 log = { version = "0.4.14", default-features = false }
-ring = { version = "*", default-features = false, features = ["alloc"] }
+ring = { version = "0.16.20", default-features = false, features = ["alloc"] }
 hex = { version = "0.4", default-features = false }
 sgx_types = { git = "https://github.com/occlum/incubator-teaclave-sgx-sdk" }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 itertools = { version = "0.8", default-features = false }
-bit-vec = "*"
+bit-vec = "0.6.3"
 httparse = { version = "1.3.2", default-features = false }
 http_req = { version = "0.9.0", default-features = false, features = ["rust-tls"] }
 rustls = { version = "0.19", default-features = false, features = ["dangerous_configuration"] }
