--- a/occlum-ra/Cargo.toml
+++ b/occlum-ra/Cargo.toml
@@ -24,7 +24,7 @@ sgx_types = { git = "https://github.com/occlum/incubator-teaclave-sgx-sdk" }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 itertools = { version = "0.8", default-features = false }
-bit-vec = { version = "*" }
+bit-vec = { version = "0.6.3" }
 httparse = { version = "1.3.2", default-features = false }
 rustls = { version = "0.19", default-features = false, features = ["dangerous_configuration"] }
 
