--- a/demo/rust_app/Cargo.toml
+++ b/demo/rust_app/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 libc = "0.2"
-occlum-ra = { path = "../occlum-ra" }
+occlum-ra = { path = "../../occlum-ra" }
 env_logger = "0.9.0"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
